--- a/src/flip_animation.css
+++ b/src/flip_animation.css
@@ -1,70 +1,76 @@
-*::after, *::before, .flip_container * {
-    box-sizing: border-box;
-    font-size: clamp(30vw,40vw,50vw);
-    font-size: 50vmin;
-    color: var(--text);
-    /* transition: all .5s; */
+* {
+  box-sizing: border-box;
+  /* font-size: 50vmin; */
 }
+
+.flip_container {
+  /* font-size: clamp(30vw, 40vw, 50vw); */
+  color: var(--text);
+}
+
 .flip-card {
-    position: relative;
-    display: inline-flex;
-    flex-direction: column;
-    border-radius: .1em;
-    width: 100%;
-  }
-  
-  .top,
-  .bottom,
-  .flip-card .top-flip,
-  .flip-card .bottom-flip {
-    height: .10em;
-    line-height: .5;
-    padding: .25em 0 .25em 0;
-    overflow: hidden;
-    text-align: center;
-    justify-content: center;
-  }
-  
-  .top,
-  .flip-card .top-flip {
-    background-color: var(--holder);
-    border-top-right-radius: .1em;
-    border-top-left-radius: .1em;
-  }
-  
-  .bottom,
-  .flip-card .bottom-flip {
-    background-color: var(--holder);
-    display: flex;
-    align-items: flex-end;
-    border-bottom-right-radius: .1em;
-    border-bottom-left-radius: .1em;
-  }
-  
-  .flip-card .top-flip {
-    position: absolute;
-    width: 100%;
-    animation: flip-top 250ms ease-in;
-    transform-origin: bottom;
-  }
-  
-  @keyframes flip-top {
-    100% {
-      transform: rotateX(90deg);
-    }
-  }
-  
-  .flip-card .bottom-flip {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    animation: flip-bottom 250ms ease-out 250ms;
-    transform-origin: top;
+  position: relative;
+  display: inline-flex;
+  flex-direction: column;
+  border-radius: 0.1em;
+  font-size: var(--font-size);
+  width: 100%;
+  top: -2vmin;
+  text-shadow: 0px 3px 5px black;
+}
+
+.top,
+.bottom,
+.flip-card .top-flip,
+.flip-card .bottom-flip {
+  height: 0.1em;
+  line-height: 0.5;
+  padding: 0.25em 0 0.25em 0;
+  overflow: hidden;
+  text-align: center;
+  justify-content: center;
+}
+
+.top,
+.flip-card .top-flip {
+  background-color: var(--holder);
+  border-top-right-radius: 0.1em;
+  border-top-left-radius: 0.1em;
+}
+
+.bottom,
+.flip-card .bottom-flip {
+  background-color: var(--holder);
+  display: flex;
+  align-items: flex-end;
+  border-bottom-right-radius: 0.1em;
+  border-bottom-left-radius: 0.1em;
+}
+
+.flip-card .top-flip {
+  position: absolute;
+  width: 100%;
+  animation: flip-top 250ms ease-in;
+  transform-origin: bottom;
+}
+
+@keyframes flip-top {
+  100% {
     transform: rotateX(90deg);
   }
-  
-  @keyframes flip-bottom {
-    100% {
-      transform: rotateX(0deg);
-    }
+}
+
+.flip-card .bottom-flip {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  animation: flip-bottom 250ms ease-out 250ms;
+  transform-origin: top;
+  transform: rotateX(90deg);
+}
+
+@keyframes flip-bottom {
+  100% {
+    transform: rotateX(0deg);
   }
+}
