--- a/src/flip_animation.css
+++ b/src/flip_animation.css
@@ -19,6 +19,10 @@
   text-shadow: 0px 3px 5px black;
 }
 
+[data-theme='light'] .flip-card {
+  text-shadow: unset;
+}
+
 .top,
 .bottom,
 .flip-card .top-flip,
